--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,6 @@
       @apply border-border;
     }
     body {
-      @apply bg-background text-foreground antialiased;
+      @apply bg-background text-foreground ;
     }
   }
