:construction: feat(page/palestra): Under development

--- a/src/app/(home)/about/Page.module.css
+++ b/src/app/(home)/about/Page.module.css
@@ -70,47 +70,6 @@
     background-color: #d9d9d9;
   }
 
-/* Estilos para o rodapé */
-.footer {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .footerContainer {
-    display: flex;
-    justify-content: space-between; /* Imagem à esquerda e redes sociais à direita */
-    align-items: center;
-    margin-bottom: 10px;  
-  }
-  
-  .logo {
-    max-width: 100px; /* Ajuste conforme necessário */
-  }
-  
-  .socialMedia {
-    display: flex;
-    gap: 15px; /* Espaço entre os links */
-  }
-  
-  .socialLink {
-    text-decoration: none;
-    color: #021067;
-    font-size: 32px; /* Tamanho dos ícones */
-  }
-  
-  .socialLink:hover {
-    color: #007bff; 
-  }
-    
-  .copyright {
-    margin-top: 10px; /* Espaço acima do copyright */
-  }
-
-  .copyright span {
-    color: #007bff; 
-  }
-
   /* Estilo para mobile */
   @media (max-width: 768px) {
     .content {
@@ -132,35 +91,17 @@
     .paragraph {
       margin-top: 0; /* Ajusta espaço acima do parágrafo, se necessário */
       order: 1; /* O parágrafo permanece abaixo no mobile */
-    }
-
-    .footerContainer {
-        flex-direction: column; /* Coloca a imagem acima das redes sociais */
-        align-items: center; /* Centraliza os itens */
-      }
-    
-      .logo {
-        margin-bottom: 10px; /* Espaço abaixo da imagem */
-      }
-    
-      .socialMedia {
-        margin-bottom: 10px; /* Espaço abaixo das redes sociais */
-        margin-top: 20px; /* Espaço acima do copyright no mobile */
-      }
-    
-      .socialLink {
-        margin-bottom: 5px; /* Espaço abaixo de cada link social no mobile */
-      }
-      
-      .copyright {
-        margin-top: 10px; /* Espaço acima do copyright no mobile */
-      }   
+    }    
   }
   
   /* Estilo para iPad e MacBook */
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 820px) and (max-width: 1024px) {
     .image {
       order: 2; /* A imagem será o segundo elemento */
+    }
+
+    .leftImage {
+      order: 1; /* A imagem será o primeiro elemento */
     }
   
     .paragraph {
