--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,6 +1,6 @@
 /* Estilos para o rodapé */
 .footer {
-    background-color: #f1f1f1;
+    background-color: #d9d9d9;
     padding: 20px;
     text-align: center;
   }
