--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -23,12 +23,12 @@
   
   .socialLink {
     text-decoration: none;
-    color: #021067;
+    color: var(--bg-primary);
     font-size: 32px; /* Tamanho dos ícones */
   }
   
   .socialLink:hover {
-    color: #007bff; 
+    color: var(--bg-secundary); 
   }
     
   .copyright {
@@ -36,7 +36,7 @@
   }
 
   .copyright span {
-    color: #007bff; 
+    color: var(--bg-secundary); 
   }
 
     /* Estilo para mobile */
