--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,13 @@
 
 @layer base {
   :root {
+    --bg-primary: hsl(0, 0%, 90%);
+    --bg-secundary: hsl(0, 0%, 100%);
+    --bg-tertiary: hsl(218, 11%, 65%);
+    --bg-highlight: hsl(224, 64%, 33%);
+    --text-highlight: hsl(224, 79%, 22%);
+    --text-primary: hsl(0, 1%, 16%);
+    --text-secundary: hsl(0, 0%, 26%);
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
