:lipstick: chore(page/home): restruturando section Fabiano

--- a/src/app/(home)/_component/sections/Section.module.css
+++ b/src/app/(home)/_component/sections/Section.module.css
@@ -39,17 +39,17 @@
   }
 
   .headingWrapper {
-    order: 1; /* Título acima no mobile */
+    order: 2; /* Título acima no mobile */
     text-align: center; /* Centraliza o texto no mobile */
   }
 
   .imageWrapper {
-    order: 3; /* Imagem abaixo do título no mobile */
+    order: 1; /* Imagem abaixo do título no mobile */
     margin-top: 1rem; /* Espaçamento entre o título e a imagem */   
   }
 
   .textWrapper {
-    order: 2; /* Texto abaixo da imagem no mobile */
+    order: 3; /* Texto abaixo da imagem no mobile */
     text-align: center; /* Centraliza o texto no mobile */
     margin-top: 1rem; /* Espaçamento opcional entre a imagem e o texto */
   }
@@ -97,25 +97,31 @@
 
   .heading {
     font-size: 5rem;
-    margin-top: -50px;
+    margin-top: 280px;
+    margin-left: 60px;
   }
 
   .subHeading {
-    font-size: 4.5rem;
+    font-size: 5rem;
+    margin-top: -30px;
+    margin-left: 60px;
   }
 
   .paragraph {
     font-size: 1.125rem;
+    margin-left: 60px;
+    margin-top: -10px;
   }
 
-  .image {
-    width: 100%; /* Aumenta a imagem para tablets */
-    height: auto; /* Mantém a proporção da imagem */
+  .image {    
+      width: 1080px;
+      height: 1020px;
+      margin-top: 10px; 
+    }
   }
-}
 
 /* Desktop Styles (MacBook) */
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1284px)  {
   .container {
     padding: 3rem;
   }
@@ -132,22 +138,72 @@
     margin-top: 0; /* Remove o espaçamento opcional */
   }
 
+  .image {   
+    width: 580px;
+    height: 780px;   
+  }
+
   .heading {
-    font-size: 9.375rem;
-    margin-left: 250px;
-    margin-top: 250px;
+    font-size: 8rem;
+    margin-left: 70px;
+    margin-top: 120px;
     text-align: center;
   }
 
   .subHeading {
-    font-size: 9.375rem;
-    margin-left: 250px;
-    margin-top: -30px;
+    font-size: 8rem;
+    margin-left: 70px;
+    margin-top: -50px;
+    text-align: center;
   }
 
   .paragraph {
-    font-size: 1rem;
-    margin-top: 10px;
-    margin-left: 250px;
+    font-size: 1.2rem;
+    margin-top: -20px;
+    margin-left: 50px;    
   }
+}
+
+  @media (min-width: 1285px) {
+    .container {
+      padding: 3rem;
+    }
+  
+    .textWrapper {
+      margin-right: 6.25rem;
+      width: 50%;
+      order: 1; /* Texto à esquerda no desktop */
+    }
+  
+    .imageWrapper {
+      width: 50%;
+      order: 2; /* Imagem à direita no desktop */
+      margin-top: 0; /* Remove o espaçamento opcional */
+    }
+  
+    .heading {
+      font-size: 9.375rem;
+      margin-left: 250px;
+      margin-top: 250px;
+      text-align: center;
+    }
+  
+    .subHeading {
+      font-size: 9.375rem;
+      margin-left: 250px;
+      margin-top: -50px;
+    }
+  
+    .paragraph {
+      font-size: 1.2rem;
+      margin-top: -20px;
+      margin-left: 250px;
+      letter-spacing: -0.5px;
+    }
+
+    .image {
+      width: 880px;
+      height: 880px;
+      margin-top: 30px;      
+    }
 }
