--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,12 @@
 
 @layer base {
   :root {
-    --bg-footer: #2b355a
+    --bg-footer: #2b355a;
     --bg-primary: hsl(0, 0%, 90%);
     --bg-secundary: hsl(0, 0%, 100%);
     --bg-tertiary: hsl(218, 11%, 65%);
     --bg-highlight: hsl(224, 64%, 33%);
-    --bg-header: #D9D9D924;
+    --bg-header: #d9d9d924;
     --text-highlight: hsl(224, 79%, 22%);
     --text-primary: hsl(0, 1%, 16%);
     --text-secundary: hsl(0, 0%, 26%);
@@ -77,22 +77,18 @@
   }
 }
 
-
 .custom-glass {
-  @apply  shadow-lg ;
-  
-  
+  @apply shadow-lg;
+
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7.6px);
   -webkit-backdrop-filter: blur(7.6px);
-  
 }
 
-
-.ql-container{
+.ql-container {
   font-size: 28px !important;
 }
 
-.quill > .ql-container > .ql-editor.ql-blank::before{
+.quill > .ql-container > .ql-editor.ql-blank::before {
   color: #b3b3b1;
 }
